maquetacion ver publicaciones y contactar anunciante

--- a/frontend/styles/global.less
+++ b/frontend/styles/global.less
@@ -1,3 +1,5 @@
 @import 'rsuite/styles/index.less';
 @import './stepper.less';
+@import "./publications";
+@import "./contactar-anunciante";
 @enable-dark-mode: true;
