semi-integracion vista foto

--- a/frontend/styles/publications.less
+++ b/frontend/styles/publications.less
@@ -61,7 +61,10 @@
 }
 .contactar-anunciante-button button {
   margin: 0 auto;
-  width: 250px;
+}
+//TODO fix
+.contactar-anunciante-button {
+  width: 150px !important;
 }
 
 .publication-card-list-img {
@@ -150,7 +153,7 @@
 
 .price-photo {
   font-size: 20px;
-  text-align: center;
+  //text-align: center;
 }
 
 .publication-card-photo-img {
@@ -177,6 +180,9 @@
 .photo-vehicle-status-data p {
   text-align: center;
   font-size: 22px;
+}
+.photo-data {
+  margin-right: 15px;
 }
 .photo-data-addres button {
   margin: 20px 0;
