Feat: register user

--- a/frontend/styles/stepper.less
+++ b/frontend/styles/stepper.less
@@ -4,3 +4,27 @@
 .show-grid{
     padding:15px
 }
+.form-person .PhoneInputInput{
+   
+    box-sizing: border-box;
+    font: inherit;
+    margin: 0;
+    font-family: inherit;
+    color: var(--rs-text-primary);
+    background-color: var(--rs-input-bg);
+    background-image: none;
+    border: 1px solid var(--rs-border-primary);
+    transition: border-color ease-in-out 0.3s;
+    border-radius: 6px;
+    padding: 7px 11px;
+    font-size: 14px;
+    width: 100px !important;
+    display: inline-block;
+    border-color: var(--rs-input-focus-border);
+}
+.form-person .section-phones{
+    width: 315px !important;
+}
+.form-person .section-phones .phone-text-input{
+    width: 75px !important;
+}
